Unnötige Dateien und Code entfernt